<resources>
    <string name="app_name">Time Compass</string>
    <string name="please_login">Please login with your information</string>
    <string name="please_signup">Please enter your information</string>
    <string name="create">Create Account</string>
    <string name="login">Login</string>
    <string name="signup">Sign Up</string>
    <string name="email">Email Address</string>
    <string name="password">Password</string>
    <string name="remember">Remember me</string>
    <string name="no_account">No Account ?</string>
    <string name="have_account">Already have an account ?</string>
    <string name="forgot">Forgot Password</string>
    <string name="username">Username</string>
    <string name="profile">Profile</string>
    <string name="notifications">Notifications</string>
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="games">Game</string>
    <string name="HomePage">Home</string>
    <string name="add_category">Add Category</string>
    <string name="add_task">Add Task</string>
    <string name="continue_">Continue</string>
    <string name="time_remaining">Time Remaining</string>
    <string name="time">Time</string>
    <string name="task_name">Task Name</string>
    <string name="description">Description</string>
    <string name="current_task">Current Task</string>
    <string name="tasks_available">Tasks Available</string>
    <string name="gain_points">Gain Points</string>
    <string name="leaderboard">Leaderboard</string>
    <string name="date">Date</string>
    <string name="gallery">Gallery</string>
    <string name="camera">Camera</string>
    <string name="start_time">Start Time</string>
    <string name="save">Save</string>
    <string name="end_time">End Time</string>
    <string name="categories_available">Categories Available</string>
    <string name="category">Category</string>
    <string name="welcome_message">Welcome %1$s</string>
    <string name="profile_message">%1$s</string>
    <string name="num_tasks_made">%1$s</string>
    <string name="num_categories_made">%1$s</string>
    <string name="user_email">%1$s</string>
    <string name="user_name">%1$s</string>
    <string name="user_date_of_creation">%1$s</string>
    <string name="view_all_categories">View All Categories</string>
    <string name="view_all_tasks">View All Tasks</string>
    <string name="set_daily_goal">Set Daily Goal</string>
    <string name="category_name">Category Name</string>
    <string name="set_minimum_number_of_hours_for_project">Set minimum number of hours for project</string>
    <string name="set_minimum_number_of_hours_for_today">Set minimum number of hours for today</string>
    <string name="set_maximum_number_of_hours_for_today">Set maximum number of hours for today</string>
    <string name="enter_number">Enter Number</string>
    <string name="recents">Recents</string>
    <string name="all_categories_and_tasks">All Categories and Tasks</string>
    <string name="statistics">Statistics</string>
    <string name="notification_text">Notification Text</string>
    <string name="stats">Stats</string>
    <string name="gauteng_south_africa">Gauteng, South Africa</string>
    <string name="tasks_made">Tasks Made</string>
    <string name="categories_made">Categories made</string>
    <string name="total_tasks_made">Total Tasks Made</string>
    <string name="total_categories_made">Total Categories Made</string>
    <string name="date_of_account_creation">Date of Account Creation</string>
    <string name="_2024_04_20">2024/04/20</string>
    <string name="filter_tasks">Filter Tasks</string>
    <string name="start_date">Start Date</string>
    <string name="end_date">End Date</string>
    <string name="filter_task_by_specific_date_period">Filter Tasks by specific date period</string>
    <string name="categories">Categories</string>
    <string name="search">Search</string>
    <string name="minimum_hours_to_spend">Minimum hours to spend:</string>
    <string name="maximum_hours_to_spend">Maximum hours to spend:</string>
    <string name="time_spent_on_app_for_today">Time spent on app for today:</string>
    <string name="_0">0</string>
    <string name="filter_categories">Filter Categories</string>
    <string name="search_hours_spent_on_a_category_between_two_dates">Search hours spent on a Category between two dates</string>
    <string name="total_hours">Total Hours</string>
    <string name="total_hours_18">Total Hours: 18</string>
    <string name="log_out">Log Out</string>
    <string name="daily_goal_for_today">Daily goal for Today</string>
    <string name="daily_goal_progress">Daily Goal Progress</string>
    <string name="you_can_set_a_daily_goal_on_the_profile_page">You can set a daily goal on the profile page</string>
    <string name="minimum_hours">Minimum Hours</string>
    <string name="maximum_hours">Maximum Hours</string>
    <string name="app_usage_hours">App Usage Hours</string>
    <string name="time_spent_in_app">Time spent in app</string>
    <string name="keys">KEYS</string>
    <string name="line_graph">Line Graph</string>
    <string name="bar_graph">Bar Graph</string>
    <string name="reset">Reset</string>
    <string name="start">Start</string>
    <string name="stop">Stop</string>
    <string name="category1">Category</string>
    <string name="enter_minimum_hours">Enter Minimum Hours</string>
    <string name="enter_maximum_hours">Enter Maximum Hours</string>
    <string-array name="categories">
        <item>PROG</item>
        <item>CLDV</item>
        <item>SAND</item>
    </string-array>

    <string-array name="colorOptions">
        <item>Select Color</item>
        <item>Dark Blue</item>
        <item>Light Blue</item>
        <item>Grey</item>
        <item>Orange</item>
        <item>Purple</item>
        <item>Black</item>
        <item>White</item>
    </string-array>
</resources>