<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/home_icon"
        android:title="@string/home"
        android:icon="@drawable/home_icon" />

    <item
        android:id="@+id/controller_icon"
        android:title="@string/games"
        android:icon="@drawable/controller_icon" />

    <!-- The middle item will be invisible, acting as a placeholder for the popup tray -->
    <item
        android:id="@+id/navigation_placeholder"
        android:visible="false"
        android:title="" />

    <item
        android:id="@+id/bell_icon"
        android:title="@string/stats"
        android:icon="@drawable/stats_icon" />

    <item
        android:id="@+id/profile_icon"
        android:title="@string/profile"
        android:icon="@drawable/profile_icon"/>
</menu>
